[master]
    - Fix for bug #1248: Key bindings not modified
    - Fix for bug #876: Windows 7/8/10 - Pinning Jabref to the taskbar
    - Feature: Option to change the table row height padding
    - Feature: Make it possible to hide the toolbar
    - Fix for bug #1270: Cleanup entries error 3
    - Fix for bug #919: Accents don't export to RTF (by ruy.takata)
    - Change the CrossRef content negotiation for bibtex DOI import (by sheffien)
    - Fix for bug #1253: Cleanup entries error 2 (by ruy.takata)
    - Fix for bug 1213 (sourceforge): Fix encoding for DOI import
    - Feature #809: import pubmed central id (pmc) field from medline
    - Fix undoing Cleanup/Convert to Biblatex
    - Adapted pattern to parse DBLP entries
    - Partial fix for bug 913: fixed export for .ods and .sxc (by yaragg)
    - Fix for bug 1240: Accepting string with length of one character (by lhaddad).
    - Fix for bug 958: ArrayIndexOutOfBoundsException on "Content Selector Dialog"
    - Fix for bug 949: Exception properly logged
    - Fix for bug 950: NullPointerException on "Manage custom imports"
    - Feature 850: Keyboard shortcut for 'Cleanup entries' (by eduardogreco)
    - Change default behaviour to be more non-invasive: timestamps and owners are NOT set by default per entry.
    - "Open Folder" works again
    - newline separator can now be configured globally
    - Feature 847: Adds title case as a case changer
    - Feature 841: Support for multiple file columns (by noravanq)
    - Fix for bug 1176: automatic bibtexkey generation for authors containing/ending with and in their name
    - Saving order of entries can now be configured per database
    - Improved XMP Privacy (pull request #8)
    - Support FindFullText with ACS DOIs (pull request #9)
    - Fixes groups and adds optional 2.9.2 save ordering (pull request #10)
    - Fixes bug 880 "PubMed Import broken" (pull request #11 by vegeziel)