@@ -78,7 +78,7 @@ public class GUIGlobals {
 	public static final int
 	SPLIT_PANE_DIVIDER_SIZE = 4,
 	SPLIT_PANE_DIVIDER_LOCATION = 145 + 15, // + 15 for possible scrollbar.
-	TABLE_ROW_PADDING = 4,
+	TABLE_ROW_PADDING = 8,
 	KEYBIND_COL_0 = 200,
 	KEYBIND_COL_1 = 80, // Added to the font size when determining table
 	MAX_CONTENT_SELECTOR_WIDTH = 240; // The max width of the combobox for content selectors.
